--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@mediapipe/camera_utils": "^0.3.1675466862",
+		"@mediapipe/pose": "^0.5.1675469404",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1"
 	},
